src/static/styles/new.css
/* ... */
.about .panel, .about .cables {
    transition: all 0.8s cubic-bezier(0.77, 0, 0.175, 1);
}

button:hover {
    background-color: #d92400;
    color: white;
}

.toggle:hover .x, .toggle:hover .y {
    background-color: white;
}

.links a:hover {
    background-color: #d92400;
    color: white;
}

#loaderswing {
    -webkit-perspective: 500px;
    -moz-perspective: 500px;
    -o-perspective: 500px;
    perspective: 500px;
    display: block;
    text-align: center;
    margin: auto;
    background: transparent;
    width: 22vw;
    @media (max-width: 800px) {
        width: 80vw;
        @media (orientation:landscape){
            width: 50vw;
        }
    }
    height: auto;
    min-width: 150px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
    z-index: 0;
}

#loaderswing>img {
    position: relative;
    z-index: 1;
    width: 100%;
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    font-size: 30px;
    top: 0px;
    z-index: 2;
    transform-origin: center top;
}

.loaderhoverslow {
    animation: swingslow 3s ease-in-out infinite;
}

@keyframes swingslow {
    0% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
    50% {
        -webkit-transform: rotateX(10deg);
        -moz-transform: rotateX(10deg);
        -o-transform: rotateX(10deg);
        -ms-transform: rotateX(10deg);
        transform: rotateX(10deg);
    }
    100% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
}

::-webkit-scrollbar {
    width: 12px;
}


/* Track */

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    -webkit-border-radius: 16px;
    border-radius: 16px;
}


/* Handle */

::-webkit-scrollbar-thumb {
    -webkit-border-radius: 16px;
    border-radius: 16px;
    background: rgba(255, 0, 0, 0.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(255, 0, 0, 0.4);
}

blockquote {
  border-left: 10px solid #ccc;
  quotes: "\201C""\201D""\2018""\2019";
  text-align: center;
  max-width: 50em;
  margin: auto;
}

blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;

}

blockquote p {
  display: inline;
}

